cabal-version: 2.2

name:           caddi-server-example
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/caddi-server-example#readme>
homepage:       https://github.com/githubuser/caddi-server-example#readme
bug-reports:    https://github.com/githubuser/caddi-server-example/issues
author:         Colin Woodbury
maintainer:     colin@fosskers.ca
copyright:      2023 CADDi
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple

extra-source-files:
    README.md
    CHANGELOG.md

executable caddi-server-example-exe
  default-language: GHC2021
  hs-source-dirs: src
  main-is: Main.hs

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules
    -funclutter-valid-hole-fits -Wpartial-fields -Wredundant-constraints -threaded
    -rtsopts -with-rtsopts=-N

  build-depends:
      base >=4.7 && <5
    , aeson
    , servant >= 0.19
    , servant-lucid
    , servant-server >= 0.19
    , text
    , time
    , wai
    , warp
